组分派增加了服务维度，可以根据事故单的服务和系统来指派支持组。
目前是服务维度的规则优先。就是说，当没有找到适合当前事故单的服务和系统的规则，才去根据提单人的组织信息，从组织维度再找分派规则。

--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -185,4 +185,5 @@ en:
   label_icm_group_assignment_c_person: Staff
   label_icm_group_assignment_c_site_group: Site Group
   label_icm_group_assignment_c_site: Site
+  label_icm_group_assignment_type: Assignment Type
   #========================= end icm group_assignments_controller =========================#  
