--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -183,4 +183,5 @@ zh:
   label_icm_group_assignment_c_person: 人员
   label_icm_group_assignment_c_site_group: 地点组
   label_icm_group_assignment_c_site: 地点
+  label_icm_group_assignment_type: 分派维度
   #========================= end icm group_assignments_controller =========================#
