--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -447,6 +447,7 @@ en:
   label_irm_location_edit: Edit Site
   label_irm_company_info: Company Info
   label_irm_company_show: Company
+  label_irm_company: Company
   label_irm_location_info: Location Info
   label_irm_company_support_manager: Support Manager
   #=========================end irm companies_controller=======================#
@@ -484,6 +485,7 @@ en:
   label_irm_department_edit: Department Edit
   label_irm_department_list: Department List
   label_irm_department_show: Department
+  label_irm_department: Department
   label_irm_department_info: Department Info
   label_irm_department_function_description: Define Department in company。
   label_irm_department_departments_tls:
