将调查问卷范围设置、公告范围设置的范围设置风格，改为DUEL的模式
其中对于调查问卷范围，删除了原来的一些字段：

    remove_column :csi_survey_ranges, :range_type
    remove_column :csi_survey_ranges, :range_company_id
    remove_column :csi_survey_ranges, :range_department_id
    remove_column :csi_survey_ranges, :range_organization_id
    remove_column :csi_survey_ranges, :role_id
    remove_column :csi_survey_ranges, :site_id

改用source_type和source_id来记录范围对象和类型，source_type为对象model的name。例如 Irm::Company.name，即"Irm::Company"
    add_column :csi_survey_ranges, :source_type, :string, :limit => 30, :after => :survey_id
    add_column :csi_survey_ranges, :source_id, :integer, :after => :survey_id

--- a/config/locales/csi/en.yml
+++ b/config/locales/csi/en.yml
@@ -97,5 +97,6 @@ en:
    label_csi_survey_range_edit: Edit Survey Range
    label_csi_survey_range: Survey Range
    label_csi_survey_range_select_range_type: Range Type Must Be Selected
+   label_csi_survey_range_name: Range Target
    #========================= end csi survey_ranges_controller=======================#
    label_csi_last_surveys: Lastest Surveys
