--- a/config/locales/csi/zh.yml
+++ b/config/locales/csi/zh.yml
@@ -97,5 +97,6 @@ zh:
    label_csi_survey_range_edit: 编辑调查范围
    label_csi_survey_range: 调查范围
    label_csi_survey_range_select_range_type: 请选择调查范围类型
+   label_csi_survey_range_name: 范围对象
    #========================= end csi survey_ranges_controller=======================#
    label_csi_last_surveys: 最近的调查问卷
