--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -671,6 +671,7 @@ zh:
   label_irm_site_status_code: 记录状态
   label_irm_site_show: 地点
   label_action_select_site: 选择地点
+  label_irm_site: 地点
   #=========================end irm site_groups_controller=======================#
   #=========================end irm flex_values_controller=======================#
   #=========================irm general_category_controller=======================#
