--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1014,3 +1014,119 @@ en:
   label_irm_formula_function_syntax_miss_parameter: Please fill formula textarea
   label_irm_formula_function_syntax_return_value: The syntax of formula is right,return value is
   #======================== end wf field updates====================
+  #======================== wf mail alert====================
+  label_irm_wf_mail_alert: 邮件警告
+  label_irm_wf_mail_alert_list: 邮件警告列表
+  label_irm_wf_mail_alert_bo_code: 业务对像
+  label_irm_wf_mail_alert_name: 名称
+  label_irm_wf_mail_alert_mail_alert_code: 编码
+  label_irm_wf_mail_alert_description: 描述
+  label_irm_wf_mail_alert_mail_template_code: 邮件模板
+  label_irm_wf_mail_recipients: 收件人
+  label_irm_wf_mail_recipient: 收件人
+  label_irm_wf_mail_alert_additional_email: 其他电子邮件
+  label_irm_wf_mail_alert_from_email: 发件人
+  label_irm_wf_mail_alert_new: 新建邮件警告
+  label_irm_wf_mail_alert_edit: 编辑邮件警告
+  label_irm_wf_mail_alert_recipient_and_send: 收发人员
+  label_irm_wf_mail_default_recipient: 请选择收件人类型
+  label_irm_wf_mail_available_recipient: 可选收件人
+  label_irm_wf_mail_alert_selected_recipients: 已添加的收件人
+  label_irm_wf_mail_alert_recipient_notice: 请选收件人类型，并选择收件人，添加到收件人列表；注意：请不要重复添加！
+  #========================  end wf mail alert====================
+  #======================== wf approval process====================
+  label_irm_wf_approval_process_info: 审批流程信息
+  label_irm_wf_approval_process_name: 名称
+  label_irm_wf_approval_process_process_order: 过程顺序
+  label_irm_wf_approval_process_process_code: 编码
+  label_irm_wf_approval_process_mail_template: 审批通知邮件模板
+  label_irm_wf_approval_process_allow_submitter_recal: 允许提交人调回批准请求
+  label_irm_wf_approval_process_description: 描述
+  label_irm_wf_approval_process_filter: 指定条目条件
+  label_irm_wf_approval_process_editable_and_next_approver: 指定批准人字段和记录可编辑性属性
+  label_irm_wf_approval_process_next_approver: 选择用于自动传送批准的字段
+  label_irm_wf_approval_process_next_approver_mode: 下一个批准人的自动确定方式
+  label_irm_wf_approval_process_record_editability: 记录可编辑性属性
+  label_irm_wf_approval_process_submit: 指定初始提交人
+  label_irm_wf_approval_process_init_submiter: 初始提交人
+  label_irm_wf_approval_process_submit_config: 提交设置
+  label_irm_wf_approval_process: 审批流程
+  label_irm_wf_approval_process_new: 创建新的审批流程
+  label_irm_wf_approval_process_manage: 管理审批流程
+  label_irm_wf_approval_process_active_list: 已启用的批准过程
+  label_irm_wf_approval_process_disable_list: 未启用的批准过程
+  label_irm_wf_approval_process_bo_code: 业务对像
+  label_irm_person: 人员
+  label_irm_role: 角色
+  label_related_person: 相关人员
+  label_irm_wf_approval_process_display_history_flag: 审批页面显示审批历史
+  label_irm_wf_approval_process_evaluate: 条件
+  label_irm_wf_approval_action_ap_submit_actions: 初始提交操作
+  label_irm_wf_approval_action_ap_final_approval_actions: 最终批准操作
+  label_irm_wf_approval_action_ap_final_reject_actions: 最终拒绝操作
+  label_irm_wf_approval_action_ap_recall_actions: 调回操作
+  label_irm_wf_approval_process_add_exists_action: 添加现有的
+  label_irm_wf_approval_add_actions: 添加新的
+  label_irm_wf_approval_action_ap_step_approval_actions: 批准操作
+  label_irm_wf_approval_action_ap_step_reject_actions: 拒绝操作
+  label_irm_wf_approval_process_reorder: 重新排序
+  label_irm_wf_approval_process_can_not_find_next_approver: 无法找到下一步骤审批人
+  label_irm_wf_approval_process_can_not_find_match_process: 无法找到适用的审批流程
+  #========================end  wf approval process====================
+  #======================== wf approval step====================
+  label_irm_wf_approval_step: 审批步骤
+  label_irm_wf_approval_step_new: 创建审批步骤
+  label_irm_wf_approval_step_process: 审批流程
+  label_irm_wf_approval_step_name: 名称
+  label_irm_wf_approval_step_step_code: 编码
+  label_irm_wf_approval_step_description: 描述
+  label_irm_wf_approval_step_step_number: 步骤编号
+  label_irm_wf_approval_step_filter_config: 指定步骤条件
+  label_irm_wf_approval_step_filter: 条件
+  label_irm_wf_approval_step_evaluate_mode_all: 所有记录都应进入此步骤。
+  label_irm_wf_approval_step_evaluate_mode_all_filter: 如果满足以下条件，则进入此步骤
+  label_irm_wf_approval_step_validate_step_number: 必须大于%{min}小于%{max}
+  label_irm_wf_approval_step_select_approver: 选择批准人
+  label_irm_wf_approval_ste_approver_type: 审批人类型
+  label_irm_wf_approval_step_approver: 审批人
+  label_irm_wf_approval_step_allow_delegation_approve: 允许代理审批
+  label_irm_wf_approval_step_approver_mode_by_approver: 允许提交人手动选择批准人
+  label_irm_wf_approval_step_approver_mode_process_default: 使用之前审批人的用户字段自动分配
+  label_irm_wf_approval_step_approver_mode_auto: 自动分配至批准人
+  label_irm_wf_approval_step_multiple_approver_mode: 当选择多个批准人时
+  label_irm_wf_approval_step_multiple_approver_mode_first_approved: 基于 首次 回复的批准或拒绝
+  label_irm_wf_approval_step_multiple_approver_mode_all_approved: 要求所有选定批准人的 一致 批准
+  label_irm_wf_approval_step_reject_behavior: 拒绝行为
+  label_irm_wf_approval_step_reject_behavior_step_reject: 只执行此步骤的拒绝操作并将批准请求发回到最近的批准人。（返回 1 步）
+  label_irm_wf_approval_step_reject_behavior_process_reject: 执行此步骤的所有拒绝操作和所有最终拒绝操作。（最终拒绝）
+  #======================== wf approval step====================
+  #======================== wf process instance====================
+  label_irm_process_instance_submit_error: 无法提交待审批
+  label_irm_step_instance_step: 审批步骤
+  label_irm_process_instance_process: 审批流程
+  label_irm_wf_process_instance_select_next_approver: 选择下一步审批人
+  label_irm_wf_process_instance_next_approver: 下一步审批人
+  label_irm_wf_step_instance_submit: 批准/拒绝批准请求
+  label_irm_wf_step_instance_comment: 注释
+  label_irm_wf_step_instance_approved: 批准
+  label_irm_wf_step_instance_reject: 拒绝
+  label_irm_wf_process_instance_next_created_at: 时间
+  label_irm_wf_step_instance_approval_status_code: 状态
+  label_irm_wf_step_instance_assign_approver: 分配审批人
+  label_irm_wf_step_instance_actual_approver: 实际审批人
+  label_irm_wf_process_instance_global_status: 总体状态
+  label_irm_wf_process_approval_history: 审批历史
+  label_irm_wf_step_instance_reassign: 转交
+  label_irm_wf_step_instance_approve_or_reject: 审批通过/拒绝
+  label_irm_wf_step_instance_reassing_approver: 转交审批人
+  label_irm_wf_process_instance_submit: 提交待审批
+  label_irm_wf_process_instance_recall: 回调审批
+  label_irm_wf_process_instance_bo_instance: 相关项
+  label_irm_wf_process_instance_bo_model_name: 类型
+  label_irm_wf_process_instance_submitter_name: 提交人
+  label_irm_wf_process_instance_submitted_at: 提交日期
+  label_irm_wf_process_instance_end_at: 结束日期
+  label_irm_wf_my_process_step_instance: 待审批项
+  label_action_submit: 提交审批
+  label_action_reassign: 转交
+  #======================== end wf process instance====================
