产生新的待审批项时发送邮件

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1262,6 +1262,8 @@ zh:
   label_irm_wf_my_process_step_instance: 待审批项
   label_action_submit: 提交审批
   label_action_reassign: 转交
+  label_irm_wf_step_instance_allow_mail_approve: 你可以回复此邮件来完成审批，回复时第一行为APPROVED/REJECT,第二行为回复注释
+  label_irm_wf_step_instance_not_allow_mail_approve: 此次审批不接受邮件审批，请勿回复
   #======================== end wf process instance====================
 
 
