新建model Icm::GroupAssignmentDetail 以及相应的表 icm_group_assignment_detail
    create_table "icm_group_assignment_details", :force => true do |t|
      t.string   "group_assignment_id",       :limit => 30,  :null => false
      t.string   "source_type",     :limit => 30,  :null => false
      t.integer   "source_id"
      t.string   "status_code",       :limit => 30,  :null => false
      t.integer  "created_by"
      t.integer  "updated_by"
      t.datetime "created_at"
      t.datetime "updated_at"
    end
移除icm_group_assignments中，之前用来记录范围的字段：

    remove_column :icm_group_assignments, :customer_company_id
    remove_column :icm_group_assignments, :customer_organization_id
    remove_column :icm_group_assignments, :customer_department_id
    remove_column :icm_group_assignments, :customer_site_group_code
    remove_column :icm_group_assignments, :customer_site_code
    remove_column :icm_group_assignments, :customer_person_id
    remove_column :icm_group_assignments, :assign_type
    remove_column :icm_group_assignments, :service_code
    remove_column :icm_group_assignments, :external_system_code
更改用于自动分派支持组的JOB，从icm_group_assignment_details中去查询

--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -186,4 +186,5 @@ en:
   label_icm_group_assignment_c_site_group: Site Group
   label_icm_group_assignment_c_site: Site
   label_icm_group_assignment_type: Assignment Type
+  label_icm_group_assignment_detail: Assigned Target
   #========================= end icm group_assignments_controller =========================#  
