--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -958,6 +958,10 @@ en:
   label_irm_wf_rule_time_trigger_rule: Workflow rule
   label_irm_wf_rule_trigger_datetime: Tigger Date
   #========================end wf_rule_time_triggers====================
+  #======================== wf actions====================
+  label_irm_wf_action_rules: 使用此操作的工作流规则
+  label_irm_wf_action_processes: 使用此操作的审批流程
+  #======================== end wf actions====================
   #======================== calendar tasks====================
   label_irm_todo_task: Events
   label_irm_todo_task_new: Create Event
