修改审批流程定义界面

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -75,6 +75,11 @@ en:
   select_all: Select All
   null_string: Empty
   test: Test
+  duel_selectable: Selectable item
+  duel_selected: Selected item
+  else: else
+  up: Up
+  down: Down
   #usual words
   notice_account_invalid_creditentials: User or Password Error
   successfully_updated: Successfully Updated
