--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1025,6 +1025,10 @@ zh:
   label_irm_object_attribute_invalid_model_attribute: BO对像中无该属性
   label_irm_object_attribute_person_flag: 人员属性
   label_irm_object_attribute_update_flag: 可更新
+  label_irm_object_attribute_change_type_link: 类型
+  label_irm_object_attribute_change_type: 更改属性类型
+  label_irm_object_standard_attributes: 标准字段
+  label_irm_object_custom_attributes: 自定义字段
   #======================== object attributes====================
   #======================== list of values====================
   label_irm_list_of_value_list: 值列表
