--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1372,6 +1372,7 @@ zh:
   label_irm_kanban_edit: 编辑看板
   label_irm_kanban_range_desc: 只有范围中的人员可以使用该看板
   label_irm_kanban_add_lane: 添加泳道
+  label_action_select_lanes: 可选泳道
   #==================================================================
   #======================= lanes ==================================
   label_irm_lane: 泳道
@@ -1398,4 +1399,5 @@ zh:
   label_irm_card_column_config: 显示设置
   label_irm_card_rule_edit: 编辑卡片规则
   label_action_edit_rule: 编辑卡片规则
+  label_action_select_cards: 可选的卡片
   #==================================================================
