--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1196,6 +1196,8 @@ en:
   label_irm_kanban_range_desc: Only people within the range can use this kanban.
   label_irm_kanban_add_lane: Add Lane
   label_action_select_lanes: Available Lanes
+  label_irm_kanban_name: Kanban Name
+  label_irm_kanban_description: Kanban Description
   #==================================================================
   #======================= lanes ==================================
   label_irm_lane: Lane
@@ -1205,6 +1207,8 @@ en:
   label_irm_lane_new: New Lane
   label_irm_lane_edit: Edit Lane
   label_irm_lane_add_card: Add Card
+  label_irm_lane_name: Lane Name
+  label_irm_lane_description: Lane Description
   #==================================================================
   #======================= cards ==================================
   label_irm_card: Card
@@ -1225,4 +1229,6 @@ en:
   label_action_select_cards: Available Cards
   label_irm_card_available_color: Available Colors
   label_irm_card_url: Card Url
+  label_irm_card_name: Card Name
+  label_irm_card_description: Card Description
   #==================================================================
