--- a/config/locales/uid/en.yml
+++ b/config/locales/uid/en.yml
@@ -18,6 +18,10 @@ en:
   label_uid_external_system:  External System
   label_uid_external_system_status_meaning: Status Meaning
   label_uid_external_system_info: External System Info
+
+  label_uid_external_system_people: System Member
+  label_uid_external_system_people_type: Type
+  label_uid_external_system_add_people: Add Member
   #=========================    end external_systems_controller=======================#
   #=========================    uid external_systems_controller=======================#
   label_uid_external_login_new: New External Login
