--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1463,3 +1463,27 @@ zh:
   label_irm_report_trigger_receiver_type_only_self: 仅发送给我
   label_irm_report_trigger_receiver_type_choose_staff: 发送给选定的人员
   #=======================end report_trigger ====================
+  #======================= tab ====================
+  label_irm_tab_list: 页面标签列表
+  label_irm_tab: 页面标签
+  label_irm_tab_new: 新建页面标签
+  label_irm_tab_edit: 编辑页面标签
+  label_irm_tab_code: 编码
+  label_irm_tab_name: 名称
+  label_irm_tab_description: 描述
+  label_irm_tab_business_object: 业务对像
+  label_irm_tab_function_group: 功能组
+  #=======================end tab====================
+  #======================= tab ====================
+  label_irm_application_list: 应用列表
+  label_irm_application: 应用
+  label_irm_application_new: 新建应用
+  label_irm_application_edit: 编辑应用
+  label_irm_application_name: 名称
+  label_irm_application_description: 描述
+  label_irm_application_business_object: 业务对像
+  label_irm_application_function_group: 功能组
+  label_irm_application_tabs: 可用标签页
+  label_irm_application_default_tab: 默认标签页
+  label_irm_application_code: 编码
+  #=======================end tab====================
