知识库栏目管理

--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -118,3 +118,4 @@ en:
   label_skm_column_new: New Column
   label_skm_column_edit: Edit Column
   label_skm_column_list: Column List
+  label_skm_column_new_child: New Child
