--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -118,3 +118,4 @@ zh:
   label_skm_column_new: 创建栏目
   label_skm_column_edit: 编辑栏目
   label_skm_column_list: 栏目列表
+  label_skm_column_new_child: 创建子栏目
