在创建知识库中过程中加入栏目选择

--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -119,3 +119,4 @@ en:
   label_skm_column_edit: Edit Column
   label_skm_column_list: Column List
   label_skm_column_new_child: New Child
+  label_skm_column_choice: Set Column
