--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -119,3 +119,4 @@ zh:
   label_skm_column_edit: 编辑栏目
   label_skm_column_list: 栏目列表
   label_skm_column_new_child: 创建子栏目
+  label_skm_column_choice: 选择栏目
