--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -112,11 +112,11 @@ zh:
   label_skm_rpt_apply_history: 事故单应用知识库分析报表
 
   #========================= skm columns ==========================================
-  label_skm_column: 栏目
-  label_skm_column_code: 栏目编码
-  label_skm_column_parent: 父栏目
-  label_skm_column_new: 创建栏目
-  label_skm_column_edit: 编辑栏目
-  label_skm_column_list: 栏目列表
-  label_skm_column_new_child: 创建子栏目
-  label_skm_column_choice: 选择栏目
+  label_skm_column: 知识库分类
+  label_skm_column_code: 分类编码
+  label_skm_column_parent: 父类
+  label_skm_column_new: 创建分类
+  label_skm_column_edit: 编辑分类
+  label_skm_column_list: 知识库分类列表
+  label_skm_column_new_child: 创建子分类
+  label_skm_column_choice: 选择知识库分类
