--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -819,6 +819,7 @@ en:
   label_irm_bulletin_selected_roles: Role
   label_irm_bulletin_selected_organizations: Organization
   label_irm_bulletin_if_access_list_none: Everyone can visit this bulletin if access list did not set anything.
+  label_irm_bulletin_attachment: Attachments
   #======================== end bulletin controller ======================
   #======================== bu_column controller ======================
   label_irm_bu_column: Bulletin Column
